@@ -2186,6 +2186,65 @@ jtag_device_def_type deviceDefinitions[] = {
 	    0x1C,	// EECRAddress
 	},
     },
+    // DEV_ATTINY84
+    {
+	"attiny84",
+	0x930C,
+	64, 128,	// 8192 bytes flash
+	4, 128,	// 512 bytes EEPROM
+	17 * 2,	// 17 interrupt vectors
+	DEVFL_MKII_ONLY,
+	NULL,	// registers not yet defined
+	{
+	    0	// no mkI support
+	},
+	{
+	    CMND_SET_DEVICE_DESCRIPTOR,
+	    { 0xFB,0xF9,0xFD,0xFF,0x7F,0xFF,0xFF,0xFF }, // ucReadIO
+	    { 0X00,0X00,0X00,0X00,0X00,0X00,0X00,0X00 }, // ucReadIOShadow
+	    { 0x8B,0xB0,0xFC,0xFF,0x7D,0xFF,0xFD,0xFA }, // ucWriteIO
+	    { 0X00,0X00,0X00,0X00,0X00,0X00,0X00,0X00 }, // ucWriteIOShadow
+	    { 0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
+	      0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
+	      0x00,0x00,0x00,0x00 }, // ucReadExtIO
+	    { 0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
+	      0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
+	      0x00,0x00,0x00,0x00 }, // ucReadIOExtShadow
+	    { 0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
+	      0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
+	      0x00,0x00,0x00,0x00 }, // ucWriteExtIO
+	    { 0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
+	      0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
+	      0x00,0x00,0x00,0x00 }, // ucWriteIOExtShadow
+	    0x00,	// ucIDRAddress
+	    0X00,	// ucSPMCRAddress
+	    0,	// ucRAMPZAddress
+	    fill_b2(64),	// uiFlashPageSize
+	    4,	// ucEepromPageSize
+	    fill_b4(0x0000),	// ulBootAddress
+	    fill_b2(0x00),	// uiUpperExtIOLoc
+	    fill_b4(8192),	// ulFlashSize
+	    { 0xBB,0xFF,0xBB,0xEE,0xBB,0xCC,0xB2,0x0D,
+	      0xBC,0x07,0xB4,0x07,0xBA,0x0D,0xBB,0xBC,
+	      0x99,0xE1,0xBB,0xAC,     },	// ucEepromInst
+	    { 0xB4,0x07,0x17 },	// ucFlashInst
+	    0x3E,	// ucSPHaddr
+	    0x3D,	// ucSPLaddr
+	    fill_b2(8192 / 64),	// uiFlashpages
+	    0x27,	// ucDWDRAddress
+	    0x00,	// ucDWBasePC
+	    0x00,	// ucAllowFullPageBitstream
+	    fill_b2(0x00),	// uiStartSmallestBootLoaderSection
+	    1,	// EnablePageProgramming
+	    0,	// ucCacheType
+	    fill_b2(0x60),	// uiSramStartAddr
+	    0,	// ucResetType
+	    0,	// ucPCMaskExtended
+	    0,	// ucPCMaskHigh
+	    0,	// ucEindAddress
+	    0x1C,	// EECRAddress
+	},
+    },
     // DEV_ATTINY25
     {
 	"attiny25",
@@ -2290,6 +2349,65 @@ jtag_device_def_type deviceDefinitions[] = {
 	    0x3E,	// ucSPHaddr
 	    0x3D,	// ucSPLaddr
 	    fill_b2(4096 / 64),	// uiFlashpages
+	    0x22,	// ucDWDRAddress
+	    0x00,	// ucDWBasePC
+	    0x00,	// ucAllowFullPageBitstream
+	    fill_b2(0x00),	// uiStartSmallestBootLoaderSection
+	    1,	// EnablePageProgramming
+	    0,	// ucCacheType
+	    fill_b2(0x60),	// uiSramStartAddr
+	    0,	// ucResetType
+	    0,	// ucPCMaskExtended
+	    0,	// ucPCMaskHigh
+	    0,	// ucEindAddress
+	    0x1C,	// EECRAddress
+	},
+    },
+    // DEV_ATTINY85
+    {
+	"attiny85",
+	0x930B,
+	64, 128,	// 8192 bytes flash
+	4, 128,	// 512 bytes EEPROM
+	15 * 2,	// 15 interrupt vectors
+	DEVFL_MKII_ONLY,
+	NULL,	// registers not yet defined
+	{
+	    0	// no mkI support
+	},
+	{
+	    CMND_SET_DEVICE_DESCRIPTOR,
+	    { 0xF8,0xE1,0xFF,0xF1,0xFB,0xFF,0xBF,0xEF }, // ucReadIO
+	    { 0X00,0X00,0X00,0X00,0X00,0X00,0X00,0X00 }, // ucReadIOShadow
+	    { 0xC8,0xE1,0xFF,0x71,0xBB,0x7F,0xAD,0xEB }, // ucWriteIO
+	    { 0X00,0X00,0X00,0X00,0X00,0X00,0X00,0X00 }, // ucWriteIOShadow
+	    { 0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
+	      0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
+	      0x00,0x00,0x00,0x00 }, // ucReadExtIO
+	    { 0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
+	      0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
+	      0x00,0x00,0x00,0x00 }, // ucReadIOExtShadow
+	    { 0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
+	      0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
+	      0x00,0x00,0x00,0x00 }, // ucWriteExtIO
+	    { 0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
+	      0x00,0x00,0x00,0x00,0x00,0x00,0x00,0x00,
+	      0x00,0x00,0x00,0x00 }, // ucWriteIOExtShadow
+	    0x00,	// ucIDRAddress
+	    0X00,	// ucSPMCRAddress
+	    0,	// ucRAMPZAddress
+	    fill_b2(64),	// uiFlashPageSize
+	    4,	// ucEepromPageSize
+	    fill_b4(0x0000),	// ulBootAddress
+	    fill_b2(0x00),	// uiUpperExtIOLoc
+	    fill_b4(8192),	// ulFlashSize
+	    { 0xBB,0xFF,0xBB,0xEE,0xBB,0xCC,0xB2,0x0D,
+	      0xBC,0x02,0xB4,0x02,0xBA,0x0D,0xBB,0xBC,
+	      0x99,0xE1,0xBB,0xAC },	// ucEepromInst
+	    { 0xB4,0x02,0x12 },	// ucFlashInst
+	    0x3E,	// ucSPHaddr
+	    0x3D,	// ucSPLaddr
+	    fill_b2(8192 / 64),	// uiFlashpages
 	    0x22,	// ucDWDRAddress
 	    0x00,	// ucDWBasePC
 	    0x00,	// ucAllowFullPageBitstream
