@@ -1,3 +1,7 @@
+2008-02-25  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
+	* src/devdescr.cc: Add entries for ATtiny84 and ATtiny85.
+
 2008-01-26  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
 	[ 1831392 ] --jtag option does not default to usb using dragon
